helm/gitea/service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: gitea
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32082
